LWCLearnwithFLOWOrg/force-app/main/default/objects/Related_Account_Contact__c/Related_Account_Contact__c.object-meta.xml
<CustomObject>
    <description>Contacts related to more than one account.</description>
    <label>Related Contact</label>
    <nameField>
        <displayFormat>RAC-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>