LWCLearnwithFLOWOrg/force-app/main/default/objects/Related_Account_Contact__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Related_Accounts_Contacts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>