LWCLearnwithFLOWOrg/force-app/main/default/objects/Related_Account_Contact__c/fields/NetSuite_Rep_Type__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Rep_Type__c</fullName>
    <label>NetSuite Rep Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Contact_Role__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Rep</fullName>
            </value>
            <value>
                <fullName>Account Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>