LWCLearnwithFLOWOrg/force-app/main/default/objects/Related_Account_Contact__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <description>MIS-287: Shows the account name on which the contact that does referrals lives.</description>
    <formula>Contact__r.Account.Name</formula>
    <label>Partner Account</label>
    <type>Text</type>
</CustomField>