LWCLearnwithFLOWOrg/force-app/main/default/objects/Related_Account_Contact__c/validationRules/Addtl_Note_For_Role_Other_TOP.validationRule-meta.xml
<ValidationRule>
    <fullName>Addtl_Note_For_Role_Other_TOP</fullName>
    <active>true</active>
    <description>If the contact role is other, additional note is required.</description>
    <errorConditionFormula>ISPICKVAL( Contact_Role__c , &quot;Other&quot;) &amp;&amp;   ISBLANK(Additional_Notes__c )</errorConditionFormula>
    <errorMessage>Please provide additional notes for the other contact role.</errorMessage>
</ValidationRule>