LWCLearnwithFLOWOrg/force-app/main/default/objects/Related_Account_Contact__c/validationRules/NetSuite_Rep_Type_TOP.validationRule-meta.xml
<ValidationRule>
    <fullName>NetSuite_Rep_Type_TOP</fullName>
    <active>true</active>
    <description>When related role is NetSuite Rep, a NetSuite Rep type is required</description>
    <errorConditionFormula>ISPICKVAL( Contact_Role__c , &quot;NetSuite Rep&quot;) &amp;&amp;
 ISBLANK( TEXT(NetSuite_Rep_Type__c) )</errorConditionFormula>
    <errorMessage>NetSuite rep type is required if the related contact role NetSuite Rep.</errorMessage>
</ValidationRule>