LWCLearnwithFLOWOrg/force-app/main/default/objects/Related_Account_Contact__c/validationRules/Unique_Account_TOP.validationRule-meta.xml
<ValidationRule>
    <fullName>Unique_Account_TOP</fullName>
    <active>true</active>
    <description>Related account must be different from the Contact&apos;s primary account.</description>
    <errorConditionFormula>Contact__r.AccountId =  Account__c</errorConditionFormula>
    <errorMessage>Related Account must be different than the Contact&apos;s primary account.</errorMessage>
</ValidationRule>